<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dp"
    tools:context=".LoginMenu" >

    <ImageView
        android:id="@+id/theLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="70dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Motto"
        android:src="@drawable/the_food_chain_logo" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/White"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/VolunteerMessage"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/txtFirstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:ems="10"
        android:hint="@string/FirstName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:ems="10"
        android:hint="@string/Phone"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/cbDriving"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/DriverLicence" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@drawable/whitebutton"
        android:text="@string/Register" />

</LinearLayout>