<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dp"
    tools:context=".LoginMenu" >

    <ImageView
        android:id="@+id/theLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Motto"
        android:src="@drawable/the_food_chain_logo" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Assigned"
        android:gravity="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btStartDelivery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
    	android:background="@drawable/whitebutton"
        android:text="@string/StartDelivery" />

    <Button
        android:id="@+id/btCall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
    	android:background="@drawable/whitebutton"
        android:text="@string/CallTFC" />

    <Button
        android:id="@+id/btLogOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
    	android:background="@drawable/whitebutton"
        android:text="@string/LogOut" />

</LinearLayout>