<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="3dp"
    tools:context=".LoginMenu" >

    <ImageView
        android:id="@+id/theLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="100dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Motto"
        android:src="@drawable/the_food_chain_logo" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:ems="10"
        android:hint="@string/Username" 
        android:textColor="@color/White"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword" 
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
    	android:background="@drawable/whitebutton"
        android:text="@string/LogIn" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
    	android:background="@drawable/whitebutton"
        android:text="@string/Register" />

</LinearLayout>